# LatticeCUT

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  batch_array.sh  cascade_batch.sh  ed_batch.sh  ice_batch.sh  lanczos_test.sh  run_all.sh  run_multiples.sh  tc_batch.sh
cmake/: CascadelakeCompilerFlags.cmake  DefaultCompilerFlags.cmake  IcelakeCompilerFlags.cmake  MKLFlags.cmake  SelectClusterBuildOptions.cmake  include_settings.cmake  latticecut_options.cmake  user_settings.cmake
params/: bcc.config  double_peak.config  fcc.config  hc.config  sc.config  single_peak.config  tc.config  test.config
params/cluster/: bcc.config  fcc.config  hc.config  sc.config  single_peak.config
slurm/: bcc.slurm  bcc_cascade.slurm  bcc_ed.slurm  fcc.slurm  fcc_cascade.slurm  fcc_ed.slurm  hc.slurm  sc.slurm  sc_cascade.slurm  sc_ed.slurm  single_peak_cascade.slurm  tc.slurm
sources/: LatticeCUT.cpp
sources/DOS/: BCC.cpp  BCC.hpp  Base.cpp  Base.hpp  CMakeLists.txt  DoublePeak.cpp  DoublePeak.hpp  EnergyRanges.cpp  EnergyRanges.hpp  FCC.cpp  FCC.hpp  FreeElectrons.cpp  FreeElectrons.hpp  HoneyComb.cpp  HoneyComb.hpp  Selector.cpp  Selector.hpp  SimpleCubic.cpp  SimpleCubic.hpp  SinglePeak.cpp  SinglePeak.hpp
sources/LatticeCUT/: ComplexModel.cpp  ComplexModel.hpp  DOSModel.cpp  DOSModel.hpp  GlobalDefinitions.hpp  ModeHelper.cpp  ModeHelper.hpp  Model.hpp  ModelAttributes.hpp  T_C.cpp  T_C.hpp  preset_operator.hpp
test_params/: ed.config  enhanced.config
tests/: plot.py  run_test.py  test_config.cmake
